discussion/kv_engine/157427/157427_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45654: Move to pausable task

Change-Id: I35632ee6911c5d49c51fccecee1786cb40589b8f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-07-19 10:20:59.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-19 10:23:47.000000000
Message: 
Patch Set 13: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37819/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37819/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32258/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32258/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/272/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/272/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12243/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12243/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12415/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12415/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/247/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/247/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12758/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11330/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11330/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20311/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10660/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    check();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:139:11: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    check();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:8: error: field has incomplete type "void" [clang-diagnostic-error]
  void check() const noexcept {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:13: error: expected ";" at end of declaration list [clang-diagnostic-error]
  void check() const noexcept {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:156:14: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
  void check() const noexcept {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:174:3: error: unknown type name "Storage" [clang-diagnostic-error]
  Storage storage_{};
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:15: error: variable has incomplete type "void" [clang-diagnostic-error]
  static void check() noexcept;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:20: error: expected ";" at end of declaration list [clang-diagnostic-error]
  static void check() noexcept;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:147:21: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
  static void check() noexcept;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:1756:51: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
      F14LinkCheck<getF14IntrinsicsMode()>::check();
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/detail/F14Table.h:1873:53: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
        F14LinkCheck<getF14IntrinsicsMode()>::check();
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_test_apis.h:28:9: note: macro "check" defined here
#define check(expr, msg)                               \
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10660/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Indestructible.h:135:11:
error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10660/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9317/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
